--- a/afectado/templates/afectado/lista_afectados.html
+++ b/afectado/templates/afectado/lista_afectados.html
@@ -1,5 +1,6 @@
 {% extends 'afectado/base.html' %}
 {% block content %}
+  <p>Personas que han realizado denuncias:</p> 
   <table class="table table-hover">
     <thead>
       <tr>
