--- a/afectado/templates/afectado/nuevo_afectado.html
+++ b/afectado/templates/afectado/nuevo_afectado.html
@@ -2,7 +2,17 @@
 {% block content %}
 <h1>Agregar Afectado</h1>
 <form role="form" method="POST" class="post-form">{% csrf_token %}
-{{ form.as_p }}
-	<button type="submit" class="save btn btn-default">Guardar</button>
+
+{% for campo in form %}
+<div class="form-group col-xs-6">
+{{ campo.errors }}
+{{ campo.label_tag }} <br>
+{{ campo }}
+</div>
+{% endfor %}
+<div class="form-group col-xs-6">
+<br><br>
+	<button type="submit" class="save btn btn-primary">Guardar</button>
+</div>
 </form>
 {% endblock content %}
