--- a/afectado/templates/afectado/lista_afectados.html
+++ b/afectado/templates/afectado/lista_afectados.html
@@ -17,7 +17,7 @@
         <td><a href="{% url 'afectado.views.detalle_afectado' id=unAfectado.pk %}">{{unAfectado.cedula_afectado}}</a></td>
         <td>{{unAfectado.apellido}} </td>
         <td>{{unAfectado.nombre}} </td>
-        <td>{{unAfectado.telf_afecto}}</td>
+        <td>{{unAfectado.telf_afectado}}</td>
         <td>{{unAfectado.direccion}}</td>
       </tr>
     {% endfor %}
