--- a/afectado/templates/afectado/detalle_afectado.html
+++ b/afectado/templates/afectado/detalle_afectado.html
@@ -1,6 +1,6 @@
 {% extends 'afectado/base.html' %}
 {% block content %}
-<p><a class="btn btn-default" href="{% url 'editar_afectado' id=detalle.pk %}"><span class="glyphicon glyphicon-pencil"></span></a></p>
+<p><a class="btn btn-default" href="{% url 'editar_afectado' id=detalle.pk %}"><span class="glyphicon glyphicon-pencil"></span> Editar</a></p>
   <table class="table table-hover">
     <thead>
       <tr>
@@ -17,7 +17,7 @@
         <td>{{detalle.cedula_afectado}}</td>
         <td>{{detalle.apellido}} </td>
         <td>{{detalle.nombre}} </td>
-        <td>{{detalle.telf_afecto}}</td>
+        <td>{{detalle.telf_afectado}}</td>
         <td>{{detalle.direccion}}</td>
       </tr>
     {% endif %}
