Cambios BD Afectados - nomenclatura y Website - Juzgado

--- a/afectado/templates/afectado/detalle_afectado.html
+++ b/afectado/templates/afectado/detalle_afectado.html
@@ -15,10 +15,10 @@
     {% if detalle %}
       <tr>
         <td>{{detalle.cedula_afectado}}</td>
-        <td>{{detalle.apellido}} </td>
-        <td>{{detalle.nombre}} </td>
+        <td>{{detalle.apellido_afectado}} </td>
+        <td>{{detalle.nombre_afectado}} </td>
         <td>{{detalle.telf_afectado}}</td>
-        <td>{{detalle.direccion}}</td>
+        <td>{{detalle.direccion_afectado}}</td>
       </tr>
     {% endif %}
     </tbody>
